# dtr-range-finder

./: .env.example  .gitignore  .replit  CLAUDE.md  PROGRESS.md  Procfile  SESSION_HANDOVER.md  dashboard-preview.html  package.json  pnpm-lock.yaml  pyproject.toml  replit.md  requirements.txt
artifacts/api-server/: package.json
artifacts/dtr-dashboard/: index.html  package.json  vercel.json  vite.config.ts
artifacts/dtr-python-app/: COMPLETE_LEARNING_SYSTEM.py  CRASH_RECOVERY_SYSTEM.py  TRADE_LOGGER_TELEGRAM.py  flask_autonomous_trading.py  (+2 more)
attached_assets/: Pasted--DTR-Trading-Agent-Complete-Replit-Deployment-Guide-Ste_1776285427744.txt  Pasted--version-5-strategy-DTR-Time-Range-Scalper-v3-shorttitl_1776415752806.txt  Pasted--version-5-strategy-title-CCHOAS21-ATR-Volume-Pullback-_1776346749163.txt  nq-2am-2025-04-17.csv  nq-2am-tv-alerts-2025-04-17.json
dtr-complete-final/: .replit  ALL_DOCUMENTATION_SUMMARY.md  AUTONOMOUS_TRADING_ENGINE_WITH_LIMITS.py  COMPLETE_FIX_DOCUMENTATION.md  CONTINUOUS_TRADING_MODES.py  FINAL_EVERYTHING_YOU_NEED.md  KELLY_CRITERION_POSITION_SIZING.py  KELLY_CRITERION_TRADING_ENGINE.py  LIVE_PL_TRACKER.py  POSITION_AND_LIMIT_MANAGER.py  Procfile  QUICK_FIX_NOW.md  START_HERE.md  SYSTEM_VERIFICATION_GUIDE.md  TRADE_LOGGER_TELEGRAM.py  claude_brain.py  drawdown_monitor.py  flask_autonomous_trading.py  hermes_brain.py  market_data_orchestrator.py  multi_instrument_config.py  projectx_api.py  requirements.txt
dtr-complete-replit/: FEATURES.md  QUICK_START.md  flask_autonomous_trading.py  multi_instrument_config.py
scripts/: post-merge.sh
(+53 files in other folders)
